edit tmux.conf and README.md

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,14 +36,11 @@ bind m \
 # 允许发送交点事件
 set -s focus-events on
 
-    
-unbind-key  Tab
-
 #--------------------------- UI --------------------
 
 #--------------------------- Session --------------------
 # 创建 session
-bind M-c new-session
+bind C-c new-session
 # 发现 session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
@@ -73,25 +70,6 @@ set -g @plugin 'tmux-plugins/tpm'
 # 自动保存和回复会话
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 #--------------------------- Tmux-Plugin-User --------------------
 # Initializes TMUX plugin manager.
