--- a/i3/config
+++ b/i3/config
@@ -106,16 +106,16 @@ hide_edge_borders both
 default_border pixel 1
 
 # 移动window到对应的工作区
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1 "1   "
+set $ws2 "2   "
+set $ws3 "3   "
+set $ws4 "4   "
+set $ws5 "5   "
+set $ws6 "6   "
+set $ws7 "7   "
+set $ws8 "8   "
+set $ws9 "9   "
+set $ws10 "10   "
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
