--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -185,7 +185,12 @@
 "cmake.configureOnOpen": true,
 "winopacity.opacity": 50,
 "C_Cpp.inactiveRegionOpacity": 0.55,
-"editor.fontSize": 16,
+"editor.fontSize": 12,
+"scm.inputFontSize": 12,
+"terminal.integrated.fontSize": 12,
+"markdown.preview.fontSize": 12,
+"debug.console.fontSize": 12,
+"chat.editor.fontSize": 12,
 "editor.mouseWheelZoom": true,
 "editor.tabSize": 2,
 "workbench.colorCustomizations": {
