add tmux.conf ui set and modify vscode keybindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,13 @@ bind m \
 set -s focus-events on
 
 #--------------------------- UI --------------------
+# 设置蓝底白字
+set -g status-style bg=blue,fg=white
+# 设置激活窗口的样式
+setw -g window-status-current-style bg=colour31,fg=colour255
+# 设置激活窗口的格式，以使其更加突出
+setw -g window-status-current-format "#[bold]#I:#W#F"
+
 
 #--------------------------- Session --------------------
 # 创建 session
