--- a/alacritty/alacritty-catppuccin-frappe.yml
+++ b/alacritty/alacritty-catppuccin-frappe.yml
@@ -1,3 +1,14 @@
+font:
+  size: 9
+key_bindings:
+  - { key: PageUp, mods: Shift, action: ScrollPageUp, mode: ~Alt }
+  - { key: PageDown, mods: Shift, action: ScrollPageDown, mode: ~Alt }
+  - { key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt }
+  - { key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt }
+mouse:
+  scrolling:
+    multiplier: 5 # 这个值表示每次滚轮事件页面滚动的行数
+
 window:
   opacity: 0.8
 colors:
