--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -450,7 +450,7 @@ map )     jump_non
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
+map gd cd /data/bin/tools/debug/oh
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
