update config and add EFI/BOOT

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -451,6 +451,7 @@ map gh cd ~
 map ge cd /etc
 map gu cd /usr
 map gd cd /data/bin/tools/debug/oh
+map gk cd /data/src/kernel/d2000/kernel_linux_5.10
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
