add font special and tmux history num

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,8 @@ bind e new-window -n '~/.tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux
 # 重新加载配置
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+set-option -g history-limit 100000
+
 # 等待绑定键的最大时间间隔(暂时体会不出来)
 set -s escape-time 10
 # 多久时间内再次按下会识别成重复按键，比如A-z + j... +k，后面的k如果在n毫秒内按下就会识别成A-z + k;
