--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -185,7 +185,13 @@
 "cmake.configureOnOpen": true,
 "winopacity.opacity": 50,
 "C_Cpp.inactiveRegionOpacity": 0.55,
+"editor.fontFamily": "'Hack Nerd Font', Consolas, 'Courier New', monospace",
+//"editor.fontWeight": "bold",
 "editor.fontSize": 13,
+"editor.lineHeight": 22,
+"editor.letterSpacing": 0.5,
+"terminal.integrated.fontFamily": "'Hack Nerd Font', Consolas, 'Courier New', monospace",
+"terminal.integrated.fontWeightBold": "bold",
 "scm.inputFontSize": 12,
 "terminal.integrated.fontSize": 12,
 "markdown.preview.fontSize": 12,
