--- a/alacritty/alacritty-catppuccin-frappe.toml
+++ b/alacritty/alacritty-catppuccin-frappe.toml
@@ -1,88 +1,90 @@
-[font]
-size = 11
+ [font]
+bold.family = "Hack Nerd Font"
+italic.family = "Hack Nerd Font"
+bold_italic.family = "Hack Nerd Font"
+size = 12
 
-[window]
-opacity = 0.8
+ [window]
+ opacity = 0.8
 
-[colors]
+ [colors]
 
-[colors.primary]
-background = "#303446" # base
-foreground = "#C6D0F5" # text
-dim_foreground = "#C6D0F5" # text
-bright_foreground = "#C6D0F5" # text
+ [colors.primary]
+ background = "#303446" # base
+ foreground = "#C6D0F5" # text
+ dim_foreground = "#C6D0F5" # text
+ bright_foreground = "#C6D0F5" # text
 
-[colors.cursor]
-text = "#303446" # base
-cursor = "#F2D5CF" # rosewater
+ [colors.cursor]
+ text = "#303446" # base
+ cursor = "#F2D5CF" # rosewater
 
-[colors.vi_mode_cursor]
-text = "#303446" # base
-cursor = "#BABBF1" # lavender
+ [colors.vi_mode_cursor]
+ text = "#303446" # base
+ cursor = "#BABBF1" # lavender
 
-[colors.search]
+ [colors.search]
 
-[colors.search.matches]
-foreground = "#303446" # base
-background = "#A5ADCE" # subtext0
+ [colors.search.matches]
+ foreground = "#303446" # base
+ background = "#A5ADCE" # subtext0
 
-[colors.search.focused_match]
-foreground = "#303446" # base
-background = "#A6D189" # green
+ [colors.search.focused_match]
+ foreground = "#303446" # base
+ background = "#A6D189" # green
 
-[colors.footer_bar]
-foreground = "#303446" # base
-background = "#A5ADCE" # subtext0
+ [colors.footer_bar]
+ foreground = "#303446" # base
+ background = "#A5ADCE" # subtext0
 
-[colors.hints]
+ [colors.hints]
 
-[colors.hints.start]
-foreground = "#303446" # base
-background = "#E5C890" # yellow
+ [colors.hints.start]
+ foreground = "#303446" # base
+ background = "#E5C890" # yellow
 
-[colors.hints.end]
-foreground = "#303446" # base
-background = "#A5ADCE" # subtext0
+ [colors.hints.end]
+ foreground = "#303446" # base
+ background = "#A5ADCE" # subtext0
 
-[colors.selection]
-text = "#303446" # base
-background = "#F2D5CF" # rosewater
+ [colors.selection]
+ text = "#303446" # base
+ background = "#F2D5CF" # rosewater
 
-[colors.normal]
-black = "#51576D" # surface1
-red = "#E78284" # red
-green = "#A6D189" # green
-yellow = "#E5C890" # yellow
-blue = "#8CAAEE" # blue
-magenta = "#F4B8E4" # pink
-cyan = "#81C8BE" # teal
-white = "#B5BFE2" # subtext1
+ [colors.normal]
+ black = "#51576D" # surface1
+ red = "#E78284" # red
+ green = "#A6D189" # green
+ yellow = "#E5C890" # yellow
+ blue = "#8CAAEE" # blue
+ magenta = "#F4B8E4" # pink
+ cyan = "#81C8BE" # teal
+ white = "#B5BFE2" # subtext1
 
-[colors.bright]
-black = "#626880" # surface2
-red = "#E78284" # red
-green = "#A6D189" # green
-yellow = "#E5C890" # yellow
-blue = "#8CAAEE" # blue
-magenta = "#F4B8E4" # pink
-cyan = "#81C8BE" # teal
-white = "#A5ADCE" # subtext0
+ [colors.bright]
+ black = "#626880" # surface2
+ red = "#E78284" # red
+ green = "#A6D189" # green
+ yellow = "#E5C890" # yellow
+ blue = "#8CAAEE" # blue
+ magenta = "#F4B8E4" # pink
+ cyan = "#81C8BE" # teal
+ white = "#A5ADCE" # subtext0
 
-[colors.dim]
-black = "#51576D" # surface1
-red = "#E78284" # red
-green = "#A6D189" # green
-yellow = "#E5C890" # yellow
-blue = "#8CAAEE" # blue
-magenta = "#F4B8E4" # pink
-cyan = "#81C8BE" # teal
-white = "#B5BFE2" # subtext1
+ [colors.dim]
+ black = "#51576D" # surface1
+ red = "#E78284" # red
+ green = "#A6D189" # green
+ yellow = "#E5C890" # yellow
+ blue = "#8CAAEE" # blue
+ magenta = "#F4B8E4" # pink
+ cyan = "#81C8BE" # teal
+ white = "#B5BFE2" # subtext1
 
-[[colors.indexed_colors]]
-index = 16
-color = "#EF9F76"
+ [[colors.indexed_colors]]
+ index = 16
+ color = "#EF9F76"
 
-[[colors.indexed_colors]]
-index = 17
-color = "#F2D5CF"
-
+ [[colors.indexed_colors]]
+ index = 17
+ color = "#F2D5CF"
