--- a/alacritty/alacritty-catppuccin-latte.toml
+++ b/alacritty/alacritty-catppuccin-latte.toml
@@ -1,5 +1,8 @@
 [font]
-size = 11
+bold.family = "Hack Nerd Font"
+italic.family = "Hack Nerd Font"
+bold_italic.family = "Hack Nerd Font"
+size = 12
 
 [window]
 opacity = 0.8
