--- a/alacritty/alacritty-catppuccin-latte.toml
+++ b/alacritty/alacritty-catppuccin-latte.toml
@@ -5,81 +5,79 @@ bold_italic.family = "Hack Nerd Font"
 size = 12
 
 [window]
-opacity = 0.8
+opacity = 0.85  # 提高透明度，减少背景干扰，增强护眼效果
 
 [colors.primary]
-background = "#EFF1F5" # base
-foreground = "#4C4F69" # text
-dim_foreground = "#4C4F69" # text
-bright_foreground = "#4C4F69" # text
+background = "#DDEDEA"  # 更柔和的浅绿色背景，进一步护眼
+foreground = "#2E3440"  # 深灰色前景色，提供良好的对比度和可读性
 
 [colors.cursor]
-text = "#EFF1F5" # base
-cursor = "#DC8A78" # rosewater
+text = "#DDEDEA"  # 光标文本颜色，与背景相配
+cursor = "#4C566A"  # 深灰色光标，与背景和谐但仍突出
 
 [colors.vi_mode_cursor]
-text = "#EFF1F5" # base
-cursor = "#7287FD" # lavender
+text = "#DDEDEA"
+cursor = "#5E81AC"  # 柔和的蓝色光标，用于Vi模式下的对比
 
 [colors.search.matches]
-foreground = "#EFF1F5" # base
-background = "#6C6F85" # subtext0
+foreground = "#2E3440"
+background = "#A3BE8C"  # 柔和的绿色背景，确保搜索匹配部分清晰可见
 
 [colors.search.focused_match]
-foreground = "#EFF1F5" # base
-background = "#40A02B" # green
+foreground = "#2E3440"
+background = "#4C566A"  # 深灰色背景，聚焦搜索匹配的高可见性
 
 [colors.footer_bar]
-foreground = "#EFF1F5" # base
-background = "#6C6F85" # subtext0
+foreground = "#2E3440"
+background = "#B2D8C8"  # 柔和的绿色背景，适合长时间使用
 
 [colors.hints.start]
-foreground = "#EFF1F5" # base
-background = "#DF8E1D" # yellow
+foreground = "#2E3440"
+background = "#A3BE8C"  # 温和的绿色背景，用于提示
 
 [colors.hints.end]
-foreground = "#EFF1F5" # base
-background = "#6C6F85" # subtext0
+foreground = "#2E3440"
+background = "#4C566A"  # 深灰色背景，用于提示结束
 
 [colors.selection]
-text = "#EFF1F5" # base
-background = "#DC8A78" # rosewater
+text = "#2E3440"
+background = "#A1E2C9"  # 柔和的绿色背景，用于文本选择
 
 [colors.normal]
-black = "#5C5F77" # subtext1
-red = "#D20F39" # red
-green = "#40A02B" # green
-yellow = "#DF8E1D" # yellow
-blue = "#1E66F5" # blue
-magenta = "#EA76CB" # pink
-cyan = "#179299" # teal
-white = "#ACB0BE" # surface2
+black = "#3B4252"
+red = "#BF616A"  # 使用更柔和的红色，以免与绿色产生视觉冲突
+green = "#A3BE8C"  # 主体使用的柔和绿色
+yellow = "#EBCB8B"  # 适度亮度的黄色，用于强调
+blue = "#5E81AC"  # 柔和的蓝色，减轻眼睛疲劳
+magenta = "#B48EAD"  # 柔和的紫色，增加视觉层次
+cyan = "#88C0D0"  # 柔和的青色，保持整体风格一致
+white = "#ECEFF4"  # 浅灰色，用于高亮显示
 
 [colors.bright]
-black = "#6C6F85" # subtext0
-red = "#D20F39" # red
-green = "#40A02B" # green
-yellow = "#DF8E1D" # yellow
-blue = "#1E66F5" # blue
-magenta = "#EA76CB" # pink
-cyan = "#179299" # teal
-white = "#BCC0CC" # surface1
+black = "#4C566A"
+red = "#BF616A"
+green = "#A3BE8C"
+yellow = "#EBCB8B"
+blue = "#5E81AC"
+magenta = "#B48EAD"
+cyan = "#88C0D0"
+white = "#ECEFF4"
 
 [colors.dim]
-black = "#5C5F77" # subtext1
-red = "#D20F39" # red
-green = "#40A02B" # green
-yellow = "#DF8E1D" # yellow
-blue = "#1E66F5" # blue
-magenta = "#EA76CB" # pink
-cyan = "#179299" # teal
-white = "#ACB0BE" # surface2
+black = "#3B4252"
+red = "#BF616A"
+green = "#4C9A85"  # 使用较暗的绿色作为暗淡颜色
+yellow = "#EBCB8B"
+blue = "#5E81AC"
+magenta = "#B48EAD"
+cyan = "#88C0D0"
+white = "#ECEFF4"
 
 [[colors.indexed_colors]]
 index = 16
-color = "#FE640B"
+color = "#A3BE8C"  # 调整为与主要绿色一致
 
 [[colors.indexed_colors]]
 index = 17
-color = "#DC8A78"
+color = "#4C566A"  # 使用较深灰色作为次要颜色
 
