--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,13 @@ bind P choose-buffer # choose which buffer to paste from
 set -g default-terminal "tmux-256color"
 #set -g default-terminal "srceen-256color"
 
+
+# 激活窗口的边框颜色设置为亮蓝色
+set-option -g pane-active-border-style fg=brightblue
+# 非激活窗口的分割线颜色设置为黄色
+set-option -g pane-border-style fg=green
+
+
 # 清除tmux的复制模式buffer缓冲
 bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
 
