--- a/alacritty/alacritty-catppuccin-frappe.toml
+++ b/alacritty/alacritty-catppuccin-frappe.toml
@@ -1,8 +1,10 @@
 [font]
-bold.family = "Hack Nerd Font"
-italic.family = "Hack Nerd Font"
-bold_italic.family = "Hack Nerd Font"
-size = 12
+normal = { family = "Hack Nerd Font", style = "Regular" }
+bold = { family = "Hack Nerd Font", style = "Bold" }
+italic = { family = "Hack Nerd Font", style = "Italic" }
+bold_italic = { family = "Hack Nerd Font", style = "Bold Italic" }
+size = 10
+
 
 [window]
 opacity = 0.85  # 提高透明度，减少背景干扰，同时增强对比度
