--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,7 +80,7 @@ bind -n M-l send-keys C-l \; run 'sleep 0.01 && tmux clear-history'
 
 #--------------------------- Tmux-Plugin-Manager --------------------
 # 插件管理工具
-set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tpm'
 
 
 # 自动保存和回复会话
@@ -89,10 +89,10 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 #--------------------------- Tmux-Plugin-User --------------------
 # Initializes TMUX plugin manager.
-run-shell '~/.tmux/plugins/tpm/tpm'
+#run-shell '~/.tmux/plugins/tpm/tpm'
 
 
 # resurrect and continuum
-run-shell `~/.tmux/plugins/tmux-continuum/continuum.tmux`
-run-shell `~/.tmux/plugins/tmux-resurrect/resurrect.tmux`
+run-shell `/data/bin/local-cloud-computer/tmux/tmux-continuum/continuum.tmux`
+run-shell `/data/bin/local-cloud-computer/tmux/tmux-resurrect/resurrect.tmux`
 set -g @continuum-save-interval '1'
