--- a/alacritty/alacritty-catppuccin-frappe.toml
+++ b/alacritty/alacritty-catppuccin-frappe.toml
@@ -1,3 +1,5 @@
+# ===== Alacritty Night · Eye-Friendly High Contrast =====
+
 [font]
 normal = { family = "Hack Nerd Font", style = "Regular" }
 bold = { family = "Hack Nerd Font", style = "Bold" }
@@ -5,81 +7,45 @@ italic = { family = "Hack Nerd Font", style = "Italic" }
 bold_italic = { family = "Hack Nerd Font", style = "Bold Italic" }
 size = 10
 
-
 [window]
-opacity = 0.85  # 提高透明度，减少背景干扰，同时增强对比度
+opacity = 0.90
 
 [colors.primary]
-background = "#1E1E2E"  # 深蓝灰色背景，提供高对比度
-foreground = "#FFFFFF"  # 纯白色前景，确保最高可读性
+background = "#0F1419"   # 深蓝黑，护眼
+foreground = "#E6EDF3"   # 不纯白，防刺
 
 [colors.cursor]
-text = "#1E1E2E"  # 光标文本颜色，与背景相配
-cursor = "#FFB86C"  # 明亮的橙色光标，明显突出
-
-[colors.vi_mode_cursor]
-text = "#1E1E2E"
-cursor = "#BD93F9"  # 明亮的紫色光标，用于Vi模式下的对比
-
-[colors.search.matches]
-foreground = "#1E1E2E"
-background = "#50FA7B"  # 亮绿色背景，确保搜索匹配部分清晰可见
-
-[colors.search.focused_match]
-foreground = "#1E1E2E"
-background = "#FF5555"  # 明亮的红色背景，聚焦搜索匹配的高可见性
-
-[colors.footer_bar]
-foreground = "#1E1E2E"
-background = "#50FA7B"  # 亮绿色背景，用于脚注栏
-
-[colors.hints.start]
-foreground = "#1E1E2E"
-background = "#FFB86C"  # 明亮的橙色背景，用于提示
-
-[colors.hints.end]
-foreground = "#1E1E2E"
-background = "#FF5555"  # 明亮的红色背景，用于提示结束
+text = "#0F1419"
+cursor = "#58A6FF"
 
 [colors.selection]
-text = "#1E1E2E"
-background = "#8BE9FD"  # 明亮的青色背景，用于文本选择
+text = "#E6EDF3"
+background = "#264F78"
+
+[colors.search.matches]
+foreground = "#0F1419"
+background = "#FFD33D"
+
+[colors.search.focused_match]
+foreground = "#0F1419"
+background = "#FF8C00"
 
 [colors.normal]
-black = "#282A36"  # 深灰色
-red = "#FF5555"  # 明亮的红色，确保警示效果
-green = "#50FA7B"  # 亮绿色，用于肯定性文本
-yellow = "#F1FA8C"  # 亮黄色，用于强调
-blue = "#BD93F9"  # 亮紫色，用于减少视觉疲劳
-magenta = "#FF79C6"  # 亮粉色，增加视觉层次
-cyan = "#8BE9FD"  # 亮青色，保持整体风格一致
-white = "#FFFFFF"  # 纯白色，用于高亮显示
+black   = "#0F1419"
+red     = "#F85149"
+green   = "#3FB950"
+yellow  = "#D29922"
+blue    = "#58A6FF"
+magenta = "#BC8CFF"
+cyan    = "#39C5CF"
+white   = "#E6EDF3"
 
 [colors.bright]
-black = "#44475A"  # 稍亮的深灰色
-red = "#FF6E6E"
-green = "#69FF94"
-yellow = "#FFFFA5"
-blue = "#D6ACFF"
-magenta = "#FF92DF"
-cyan = "#A4FFFF"
-white = "#F8F8F2"  # 更亮的白色
-
-[colors.dim]
-black = "#1E1E2E"  # 更深的背景色
-red = "#FF5555"
-green = "#50FA7B"
-yellow = "#F1FA8C"
-blue = "#BD93F9"
-magenta = "#FF79C6"
-cyan = "#8BE9FD"
-white = "#BFBFBF"  # 稍暗的白色
-
-[[colors.indexed_colors]]
-index = 16
-color = "#FF79C6"  # 调整为与主要粉色一致
-
-[[colors.indexed_colors]]
-index = 17
-color = "#BD93F9"  # 使用亮紫色作为次要颜色
-
+black   = "#161B22"
+red     = "#FF7B72"
+green   = "#56D364"
+yellow  = "#E3B341"
+blue    = "#79C0FF"
+magenta = "#D2A8FF"
+cyan    = "#56D4DD"
+white   = "#F0F6FC"
